# multiplat-api

./: pyproject.toml
src/: db.sqlite3
src/apps/core/: urls.py  views.py
src/apps/graphql/: schema.py  urls.py  views.py
src/apps/graphql/tests/: conftest.py
src/apps/graphql/tests/views/: test_home.py  test_schema.py
src/config/: settings.py  urls.py
