[project]
name = "multplat-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "graphene-django>=3.2.3",
]

[dependency-groups]
dev = [
  "flake8[bugbear]>=7.3.0",
  "pytest>=8.4.2",
  "pytest-django>=4.11.1",
  "ruff>=0.14.3",
]

[tool.pytest.ini_options]
pythonpath = "./src"
DJANGO_SETTINGS_MODULE = "src.config.settings"

[tool.pyright]
extraPaths = ["./src"]
